manifests/ingress-12.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-f4b9"
    labels:
        app: "diaggarw-f4b9"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarw732c-diaggarw-f4b9.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-f4b9"
                servicePort: 8080
